# notification-service

./: .github-mirror-gitlab-ci.yml  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
helm-values/: notification-router.yml  notification-service.yml
notification_service/: __init__.py  config.py  dispatcher.py  ioc.py  tables.py
notification_service/infrastructure/: __init__.py  base.py  enums.py
notification_service/infrastructure/crud/: __init__.py  crud_notification.py  crud_user_preference.py
notification_service/infrastructure/models/: __init__.py  base_uuid_model.py  notification.py  user_preference.py
notification_service/migrations/: env.py
notification_service/migrations/versions/: 2026_04_26-00_52-e6ba8a64aab4_init_notifications.py  2026_04_26-15_15-f7402b080ede_add_user_notification_preference.py  2026_04_26-16_25-b376595de8da_edit_recipients.py  2026_04_26-18_00-c1d3e2f4a5b6_drop_delivered_at.py  2026_04_27-02_45-6faa66019d15_edit_enums.py  2026_04_27-12_04-a9d53eaee4a2_edit_enums.py  2026_04_27-13_31-f03f967b16aa_drop_template_id_template_data.py
notification_service/router/: __init__.py  config.py  router.py
notification_service/service/: __init__.py  config.py  server.py
notification_service/service/client/: __init__.py  async_client.py  dto.py
notification_service/service/proto/: notification_service.proto  notification_service_pb2.py  notification_service_pb2.pyi  notification_service_pb2_grpc.py
notification_service/workers/: __init__.py  config.py
notification_service/workers/email_handler/: email_sender.py  methods.py
tests/: conftest.py
tests/integration/: test_pipeline_local.py
tests/unit/: test_async_client.py  test_dispatcher.py  test_enum_storage.py  test_preferences.py  test_router.py  test_server.py
tests/utils/: factories.py  mocks.py
